<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".CreateActivity">

    <ImageView
        android:id="@+id/fondo2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/descargar" />

    <TextView
        android:id="@+id/textViewTitleCreate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="62dp"
        android:layout_marginBottom="40dp"
        android:background="#800B6002"
        android:gravity="center"
        android:text="@string/crear_factura"
        android:textColor="#F8F4F4"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="30dp"
        android:background="#900F658E"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/introduzca_la_descripci_n_de_la_compra"
        android:inputType="textMultiLine"
        android:textColor="#FBFBFB"
        android:textColorHint="#A3A1A1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleCreate" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="50dp"
        android:background="#900F658E"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/valor_de_compra"
        android:inputType="numberDecimal"
        android:textColor="#FBFBFB"
        android:textColorHint="#A3A1A1"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewLugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

    <TextView
        android:id="@+id/textViewLugar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:background="#900F658E"
        android:gravity="start"
        android:text="@string/elija_ubicaci_n"
        android:textColor="#F8F4F4"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/spinnerLocations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

    <Spinner
        android:id="@+id/spinnerLocations"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="41dp"
        android:layout_marginLeft="41dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="40dp"
        android:background="#900F658E"
        android:entries="@array/locations"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLugar" />

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="50dp"
        android:onClick="addBill"
        android:text="@string/a_adir"
        android:textColor="#F6F1F1"
        android:textSize="30sp"
        app:backgroundTint="#C4571F2A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLocations" />

</androidx.constraintlayout.widget.ConstraintLayout>